--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 decorator==5.2.1
 et_xmlfile==2.0.0
 Flask==3.1.1
+Flask-Login==0.6.3
 google-auth==2.40.3
 google-auth-oauthlib==1.2.2
 gspread==5.12.4
@@ -34,4 +35,5 @@ six==1.17.0
 tzdata==2025.2
 urllib3==2.5.0
 Werkzeug==3.1.3
+
 
